--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "@types/node": "12.12.2",
-    "@types/selenium-webdriver": "^3.0.8",
-    "axios": "^0.21.0",
-    "selenium-webdriver": "^3.6.0",
-    "typescript": "^4.1.3"
+    "@types/node": "^20.10.5",
+    "@types/selenium-webdriver": "^4.1.21",
+    "axios": "^1.6.3",
+    "selenium-webdriver": "^4.16.0"
   },
   "author": "Goeff Thomas <goeffthomas@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^46.9.1",
+    "eslint-plugin-n": "^16.5.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-typescript": "^0.14.0",
+    "typescript": "^5.3.3"
+  }
 }
